bpo-31721: Allow Future._log_traceback to only be set to False (#5009)